static/css/style.css
/* RESET */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    font-weight: inherit;
    font-style: inherit;
    font-size: 100%;
    font-family: inherit;
    vertical-align: baseline;
}
/* remember to define focus styles! */
:focus {
    outline: 0;
}
body {
    line-height: 1;
    color: black;
    background: white;
}
ol, ul {
    list-style: none;
}
/* tables still need 'cellspacing="0"' in the markup */
table {
    border-collapse: separate;
    border-spacing: 0;
}
caption, th, td {
    text-align: left;
    font-weight: normal;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: "";
}
blockquote, q {
    quotes: "" "";
}

/* THEME */
body {
    font: 15px/22px Arial, Times, 'Times New Roman', serif;
    color: #000;
    background: #D6E9F7 url(bg_page.jpg) no-repeat top center;
}

/** Elements **/
a {
    color: #0C386E;
    text-decoration: none;
}
a:hover { color: #00AAD8 }
h1, h2, h3, h4, h5, h6 {
    font-family: Arial, Verdana, sans-serif;
    font-weight: bold;
}
h1, h2 { font-size: 20px; }
h3 { font-size: 18px; }
h4 { font-size: 17px; }
h5 { font-size: 16px; }
h6 { font-size: 15px; }
ul { list-style: square; }
ol { list-style: decimal; }
.generic_list {
    font-size: 12px;
    color: #333;
    list-style: none;
    margin-left: 13px;
}
blockquote {
    padding: 20px 20px 0 20px;
    margin: 5px 20px 20px;
    font-family: Arial, Verdana, sans-serif;
    font-size: 14px;
    color: #333;
    background: #eee;
    border: 1px solid #ddd;
}
blockquote blockquote {
    margin: 0 0 20px 0;
    background: #f7f7f7;
    border: 1px solid #ccc;
}
code {
    padding: 2px 3px;
    font: normal normal normal 12px/22px Arial, Verdana, sans-serif;
    color: #444;
    background: #eee;
}
cite {
    display:none;
}
pre {
    overflow: auto;
    padding: 20px;
    font: normal normal normal 12px/22px Arial, Verdana, sans-serif;
    color: #444;
    background: #eee;
    border: 1px solid #ddd;
}
pre code { padding: 0; }
table {
    width: 100%;
    background: #fff;
    border-left: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
}
caption {
    font: italic normal normal 12px/22px Verdana, Geneva, Tahoma, sans-serif;
    text-align: right;
    color: #666;
}
tr {
    margin: 1px;
    border-top: 1px solid #ddd;
}
td {
    padding: 3px;
    font: normal normal normal 13px/22px Arial, Verdana, sans-serif;
    border-right: 1px solid #ddd;
}
tr.alt td, tr.even td { background: #f7f7f7; }
th {
    padding: 3px;
    font-weight: normal;
    color: #444;
    background: #eee;
    border-right: 1px solid #ddd;
}
p { 
    color: #333; 
    padding-bottom: 15px;
}
strong, b { font-weight:bold; }
em, i { font-style: italic; }
acronym {
    font-size: 13px;
    border: none;
}
ul{
    color: #333; 
    margin-left: 10px;
    padding-left: 10px;
    padding-bottom: 15px;
}

#loading {
    position: fixed;
    top: 0;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    display: none;
    padding: 10px;
}

/* Messages */
#message_box { text-align: center; margin-left: auto; margin-right: auto; width:1000px;}
#message_box ul { list-style-type: none; }
#message_box .dismiss { float: right; margin-right: 6px; font-size: 0.8em; }

#message_box .info, #message_box .success, #message_box .warning, #message_box .error, #message_box .validation {
    border: 2px solid;
    margin: 10px 0px;
    padding:10px;
}
.info    { color: #00529B; background-color: #BDE5F8; }
.success { color: #4F8A10; background-color: #DFF2BF; }
.warning { color: #9F6000; background-color: #FEEFB3; }
.error   { color: #D8000C; background-color: #FFBABA; }
.ga_track_pageview {display:none;}

.highlight { background-color: #FFFF88; }


/** Content Containers **/

#header_container, #content_container, #footer_container{
	width:100%;
	position:relative;		
}
#header, #content, #footer{
	width:1000px;
	margin:0 auto;
	position:relative;
}
#content_container {
	min-height:587px;
	background: url(../images/theme/bg_content.png) no-repeat bottom center;
}
#major_col {
    width: 680px;
    padding:24px;
    background-color:#FFF;
}
#minor_col {
    right:0px;
    top:0px;
    position:absolute;
    padding-top:24px;
    width: 250px;
}

/** Header **/
#header_container{
	height:119px;
	background: url(../images/theme/bg_header.png) no-repeat top center;
}
#header_logo {
	position:absolute;
	left:323px;
	top:12px;
}

#header #cse_search_box{
    position:absolute;
    right:0px;
    top:20px;
}
#nav {
    position:absolute;
    left:0;
    top:78px;
    font-size:24px;
    font-weight:bold;
}
#header-links {
    position:absolute;
    right:0px;
    top:78px;
}

/** Footer **/
#footer_container{
	height:354px;
	background: url(../images/theme/bg_footer.png) no-repeat bottom center;
}

#footer_copy {
    margin-right:100px;
    padding-top:120px;
    font-size: 11px;
    
}
#footer_copy p{
    color:#FFF;
    text-align:center;
}

/* Breadcrumbs */
#breadcrumbs {font-size:12px; margin-bottom:20px;}



.spacer { clear: both; }
.atom_link { margin-left: 5px; }

/* Action Detail page */
.action_detail_task_container {
    position:relative;
}
.action_detail_task_checkbox {
    width:30px;
    height:30px;
    position: absolute;
    top:-5px;
    left:0px;
}
.action_detail_task {
    margin-left:40px;
}

/* Logged in Homepage */
#actions_recommended .task_list{
    display:none;
}

/* Action Show page */
#action_show .task_list{
    display:none;
}


/* Chart */
#chart{
    width:600px;
    height:300px;
}
.chart_tooltip {
    width:250px;
    font-size:12px;
    border: 2px solid #000;
    padding: 5px;
    background-color: #fee;
}
/* ... */

